deployments/02-dbconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmdemo
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: dbconfig
        mountPath: "/config/db"
        readOnly: true
      - name: appconfig
        mountPath: "/config/app"
        readOnly: true
  volumes:
    - name: dbconfig
      secret:
        secretName: dbsecret
    - name: appconfig
      configMap:
        name: appconfig
        items:
        - key: app.prop
          path: app.properties
