deployments/04-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
    tier: backend
spec:
  replicas: 3                  # Number of replicas
  selector:                    # Pod selector. Match all pods with specified labels
    matchLabels:
      app: echo
      tier: backend
  template:                    # Pod template used to create new pods
    metadata:
      labels:
        app: echo
        tier: backend
    spec:
      containers:
      - name: echo
        image: soaserele/echo:1
