deployments/07-deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-blue
  labels:
    version: "2"
    app: echo
    tier: backend
spec:
  replicas: 4                  # Number of replicas
  strategy:
    type: Recreate
  selector:                    # Pod selector. Match all pods with specified labels
    matchLabels:
      version: "2"
      app: echo
      tier: backend
  template:                    # Pod template used to create new pods
    metadata:
      labels:
        version: "2"
        app: echo
        tier: backend
    spec:
      containers:
      - name: echo
        image: echo:2
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /
            port: 80
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash","-c","sleep 30"]
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
