deployments/07-deploy-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-green
  labels:
    version: "1"
    app: echo
    tier: backend
spec:
  replicas: 4                  # Number of replicas
  strategy:
    type: Recreate
  selector:                    # Pod selector. Match all pods with specified labels
    matchLabels:
      version: "1"
      app: echo
      tier: backend
  template:                    # Pod template used to create new pods
    metadata:
      labels:
        version: "1"
        app: echo
        tier: backend
    spec:
      containers:
      - name: echo
        image: soaserele/echo:1
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /
            port: 80
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash","-c","sleep 30"]
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
