deployments/05-deploy-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
    tier: backend
spec:
  replicas: 3                  # Number of replicas
  strategy:
    type: Recreate
  selector:                    # Pod selector. Match all pods with specified labels
    matchLabels:
      app: echo
      tier: backend
  template:                    # Pod template used to create new pods
    metadata:
      labels:
        app: echo
        tier: backend
    spec:
      containers:
      - name: echo
        image: soaserele/echo:1
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: LoadBalancer         
  selector:
    app: echo
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
