deployments/09-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    tier: frontend
spec:
  replicas: 3                  # Number of replicas
  selector:                    # Pod selector. Match all pods with specified labels
    matchLabels:
      app: nginx
      tier: frontend
  template:                    # Pod template used to create new pods
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.17
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP         # Default service type 
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
