deployments/10-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
    tier: backend
spec:
  replicas: 1                  
  selector:                   
    matchLabels:
      app: echo
      tier: backend
  template:
    metadata:
      labels:
        app: echo
        tier: backend
    spec:
      containers:
      - name: echo
        image: soaserele/echo:3
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        readinessProbe:
          timeoutSeconds: 10
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: LoadBalancer
  selector:
    app: echo
    tier: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
