deployments/14-stateless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: ccprice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccprice
  template:    
    metadata:
      labels:
        app: ccprice
    spec:
      containers:
      - name: ccprice
        image: soaserele/ccprice:1
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ccprice
spec:
  type: LoadBalancer
  selector:
    app: ccprice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
