deployments/17-kafka.yaml
#
# Kafka needs Zookeeper. Let's start a small zookeeper cluster
# 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-zookeeper
  labels:
    app: kafka
    tier: zookeeper
spec:
  serviceName: kafka-zookeeper
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kafka
      tier: zookeeper
  template:
    metadata:
      labels:
        app: kafka
        tier: zookeeper
    spec:
      containers:
      - image: confluentinc/cp-zookeeper:6.1.1
        name: zookeeper
        command:
        - "bash"
        - "-c"
        - |
          export ZOOKEEPER_SERVER_ID=$((${HOSTNAME##*-}+1)) && \
          /etc/confluent/docker/run
        ports:
        - name: client
          containerPort: 2181
        - name: peer
          containerPort: 2888
        - name: leader
          containerPort: 3888
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "200m"
        volumeMounts:
        - name: zookeeper-volume
          mountPath: /var/lib/zookeeper
  volumeClaimTemplates:
  - metadata:
      name: zookeeper-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-zookeeper
  labels:
    app: kafka
    tier: zookeeper
spec:
  clusterIP: None
  selector:
    app: kafka
    tier: zookeeper
  ports:
  - name: client
    port: 2181
  - name: peer
    port: 2888
  - name: leader
    port: 3888
---
#
# Let's start a cluster of Kafka brokers
# 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-broker
  labels:
    app: kafka
    tier: broker
spec:
  serviceName: kafka-broker
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kafka
      tier: broker
  template:
    metadata:
      labels:
        app: kafka
        tier: broker
    spec:
      containers:
      - image: confluentinc/cp-kafka:6.1.1
        name: broker
        command:
        - sh
        - -c
        - |
          export KAFKA_BROKER_ID=${HOSTNAME##*-} && \
          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${HOSTNAME}.kafka-broker.default.svc.cluster.local:29092,PLAINTEXT_HOST://${HOSTNAME}.kafka-broker.default.svc.cluster.local:9092 && \
          exec /etc/confluent/docker/run
        ports:
        - name: local
          containerPort: 9092
        - name: remote
          containerPort: 29092
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "200m"
        volumeMounts:
        - name: kafka-volume
          mountPath: /var/lib/kafka
  volumeClaimTemplates:
  - metadata:
      name: kafka-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  labels:
    app: kafka
    tier: broker
spec:
  clusterIP: None
  selector:
    app: kafka
    tier: broker
  ports:
  - name: local
    port: 9092
  - name: remote
    port: 29092
